--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ reqwest = "0.11.3"
 tokio = { version = "1.7.0", features = ["full"] }
 error-chain = "0.12.4"
 indicatif = "0.16.2"
+unzpack = "0.1"
