--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ tokio = { version = "1.7.0", features = ["full"] }
 error-chain = "0.12.4"
 indicatif = "0.16.2"
 unzpack = "0.1"
+directories = "3.0.2"
+os_info = { version = "3.0", default_features = false }
